Initial commit with almost complete ID3 v2.3/4 reader.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,17 @@
 *.lai
 *.la
 *.a
+
+# Build directories
+Release/
+Debug/
+ipch/
+
+# Offending files
+*.sdf
+*.user
+*.suo
+*.ncb
+*.log
+*.bak
+*.opensdf
